# scanCONTROL-Linux-SDK

./: README.md  ReleaseNotes
documentation/: C++-Linux-InterfaceDocumentation.docx  C++-Linux-Schnittstellendokumentation.docx  OpManPartB_scanCONTROL-30xx.html  OpManPartC.html  scanCONTROL 30xx Quick Reference.html
examples/C/: meson.build
examples/C++/: meson.build
examples/Python/: container_mode.py  full_profiles_poll.py  partial_profiles_callback.py
libllt/: meson.build
libmescan/: meson.build
libmescan/include/: LLTDataTypes.h
libmescan/src/: mescan_adv.c  mescan_basic.c
python_bindings/pylinllt/: pylinllt_adv.py
